# supervisord-client

./: README.md  pyproject.toml
supervisord_client/: __init__.py  node.py  process.py  processes.py  utils.py  xmlrpc.py
tests/: test_supervisord_client.py
